After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722189 - GtkApplicationWindow: give up on handling dispose
GtkApplicationWindow: give up on handling dispose
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkApplication
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-01-14 15:37 UTC by Allison Karlitskaya (desrt)
Modified: 2014-01-14 15:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkApplicationWindow: give up on handling dispose (6.05 KB, patch)
2014-01-14 15:38 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Allison Karlitskaya (desrt) 2014-01-14 15:37:59 UTC
Stop trying to deal with "theoretical possibilities".

We can't possibly continue to be a faithful GActionGroup implementation
across dispose because dispose has a side effect of removing everyone's
signal handlers.

The code that we ran after the dispose chainup to do all of the fancy
signal emulation was therefore dead.  The test that aimed to verify this
was buggy itself due to an uninitialised variable, so really, it never
worked at all.

We keep the re-ordering of the chainup from the original commit to avoid having
trouble with GtkActionMuxer and keep the checks in place that will prevent an
outright segfault in the case that someone else tries to use the interface
post-dispose.
Comment 1 Allison Karlitskaya (desrt) 2014-01-14 15:38:01 UTC
Created attachment 266269 [details] [review]
GtkApplicationWindow: give up on handling dispose
Comment 2 Matthias Clasen 2014-01-14 15:39:02 UTC
Review of attachment 266269 [details] [review]:

yeah
Comment 3 Allison Karlitskaya (desrt) 2014-01-14 15:41:54 UTC
Attachment 266269 [details] pushed as bc3867e - GtkApplicationWindow: give up on handling dispose